# stepmania-ml

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE_CRITERIA.md  environment.yml  probe_bpm_governor_ablation.py  probe_bpm_head_decomp.py  probe_holdburst_dynamics.py  probe_onset_head_bpm.py  probe_quality_choreo.py  probe_quality_features.py  probe_quality_variance.py  probe_train_bpm_coverage.py  pyproject.toml  readme-0.1.0-audit.md  requirements.txt  setup.py  test_models.py  test_syntax.py
.claude/: settings.json
cache/: radar_manifold.npz
config/: contrastive_experiment_a.yaml  contrastive_experiment_b.yaml  data_config.yaml  model_config.yaml  optuna_config.yaml
docs/: chart_representation.md  conditioning_roadmap.md  contrastive_learning_experiments.md  development_status.md  phase2_generative_design.md
notebooks/: contrastive_training.ipynb  contrastive_training_simplified.ipynb  data_exploration.ipynb  test_evaluation.ipynb  test_evaluation_2head.ipynb  training_analysis-DN.ipynb  training_analysis.ipynb
notes/: HANDOFF.md  INDEX.md  arc_lag_findings.md  augmentation_roadmap.md  cache_index_bug.md  chaos_conditioning_findings.md  chaos_mechanism_plan.md  chaos_placement_ceiling_findings.md  chaos_retrain_scope.md  choreography_metrics_findings.md  conditioning_match_findings.md  conditioning_step1_pattern_prefs.md  conditioning_step2_radar.md  conditioning_step2b_cfg.md  conditioning_step3_style.md  constraint_relaxation_roadmap.md  density_calibration.md  difficulty_corner_findings.md  factorized_head_findings.md  (+61 more)
(+248 files in other folders)
