[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stepmania-chart-generator"
version = "0.1.0"
description = "ML StepMania chart generator: audio-conditioned autoregressive generation + difficulty classification, with a learned taste critic."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jackson Porter", email = "jrporter.47@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "torch>=2.1.0",
    "torchmetrics>=1.0.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0.0", "ipykernel>=6.25.0", "pytest>=7.0.0"]
full = [
    "accelerate>=0.21.0",
    "transformers>=4.33.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "optuna>=3.4.0",
    "scipy>=1.10.0",
    "pydub>=0.25.0",
]

# Mirrors the previous find_packages() behaviour: ship the importable `src` (and `config`)
# packages, exclude tests/notebooks/experiments/outputs/docs.
[tool.setuptools.packages.find]
exclude = ["tests*", "notebooks*", "experiments*", "outputs*", "docs*", "mlruns*", "checkpoints*"]
